--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -14,33 +14,35 @@
         android:layout_height="150dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="horizontal">
 
 
         <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="3"
-                android:text="Ciudad 1" />
+            android:id="@+id/textViewName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_weight="2"
+            android:text="Ciudad 1"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/textViewClimate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="clima" />
+            android:layout_weight="2"
+            android:text="clima"
+            android:textSize="24sp" />
 
         <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="2"
-                app:srcCompat="@android:drawable/btn_star_big_on" />
-
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
 
 
     </LinearLayout>
