--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainActivity">
-
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.theweatherproject.ui.MainActivity"
-        android:label="activity_main"
-        tools:layout="@layout/activity_main" />
+    app:startDestination="@id/fragmentList">
+    <fragment
+        android:id="@+id/fragmentList"
+        android:name="com.example.theweatherproject.ui.FragmentList"
+        android:label="fragment_list"
+        tools:layout="@layout/fragment_list" />
 </navigation>
