--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,5 +8,14 @@
         android:id="@+id/fragmentList"
         android:name="com.example.theweatherproject.ui.FragmentList"
         android:label="fragment_list"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_fragmentList_to_cityFragment2"
+            app:destination="@id/cityFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cityFragment"
+        android:name="com.example.theweatherproject.ui.CityFragment"
+        android:label="fragment_city_list"
+        tools:layout="@layout/fragment_city_list" />
 </navigation>
