--- a/app/src/main/res/layout/fragment_city.xml
+++ b/app/src/main/res/layout/fragment_city.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.City">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/citylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
